# MesonProject

./: meson.build  task.txt
abstract_factory/: meson.build
abstract_factory/source/: meson.build
abstract_factory/test/: meson.build
proto_example/: main.cpp
proto_example/schema/: task_info.proto
